--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
             </tbody>
         </table>
     </div>
-    <div align="center">
+    <div align="center" class="button-container" >
         <button id="submit">Submit</button>
+        <button id="reset">Reset</button>
     </div>
 
     <script src="script.js"></script>
