--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
 
 <body>
     <h1 align="center">9 x 9 Sudoku Solver</h1>
-    <p id="alert-msg">Input Some Values!</p>
-    <div id="error-modal" class="modal">
-    <div class="modal-content">
-        <span class="close" id="modal-close">&times;</span>
-        <p id="invalid-input-msg">Invalid input! </p>
-    </div>
+    <p id="alert-msg">Invalid Input!</p>
+    
+    <p id="invalid-input-msg" style="color: red; display: none;">Invalid input! </p>
 </div>
     <div id="content-div">
         <table id="grid">
